--- a/public/index.html
+++ b/public/index.html
@@ -484,7 +484,7 @@
           <div class="skill-row-right prev-e">
             <p class="skill-text prev">
               <span class="prev-tag">previous education</span>
-              Bachelors of Music<br />in Performance<br /><i>Classical Guitar</i>
+              Bachelor's of Music<br />in Performance<br /><i>Classical Guitar</i>
             </p>
           </div>
         </div>
