Fixes minor typo

--- a/public/index.html
+++ b/public/index.html
@@ -402,7 +402,7 @@
       <div class="card--gallery lower">
         <div class="card--gallery-inner lower-text">
           <p>
-            "LumberJack" is a full-stack template developed for small businesses
+            "LumberJack" is a Full Stack template developed for small businesses
             and social media creators. The theme integrates third-party services
             to eliminate update, security, and issues associated with code-heavy
             CMS templates. Featuring a headless CMS with Prismic, a multi-network
