--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <div class="inner-banner-half-cell laptop-cell">
         <img class="laptop-img" src="/images/laptop-code.png" />
       </div>
-      
+
       <div class="inner-banner-half-cell text-cell">
         <h2 class="about-title">A bit about me</h2>
         <p class="about-text">
@@ -48,6 +48,91 @@
 
   <section class="gallery-container">
     <!-- <h2>Here are some examples of my work</h2> -->
+
+    <!-- || Gallery9 Frame  -->
+    <div class="gallery-frame">
+
+      <div class="card--gallery">
+        <div class="card--gallery-inner">
+          <div class="gallery-img-section">
+            <button id="gallery-btn-9" class="gallery-btn g-btn-left" type="button" onmousedown="gallery9Left()"></button>
+            <img id="gallery9-img" class="main-img" src="/images/gallery/mock-horizon/capture1.png" />
+            <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery9Right()"></button>
+          </div>
+
+          <div class="gallery-right-section">
+            <h3>Demo Application</h3>
+            <p>
+              <a href="https://main.dzghy9dsley4l.amplifyapp.com/" target="_blank">SkyLines</a><br /><br /><span class="sub-items">in-development</span>
+            </p>
+            <br />
+            <h4>Tech</h4>
+            <ul>
+              <li><span class='tech-item'>Ant Design</span></li>
+              <li><span class='tech-item'>React</span></li>
+              <li><span class='tech-item'>AWS Amplify</span></li>
+            </ul>
+            <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/aws--hello-ant', target='_blank')">
+              View GitHub Repo
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card--gallery lower" style="height: 220px">
+        <div class="card--gallery-inner lower-text">
+          <p>
+            This is a mock application using Ant Design and AWS Amplify for hosting. It is a direct replication of an existing software, using promotional videos to model the layout and actions. This
+            project is built for a specific interview, it will be taken down upon the completion of the interview process and not re-used. It's purpose is to familiarize myself with Ant Design and the
+            AWS hosting platform.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="spacer"></div>
+
+    <!-- || Gallery8 Frame  -->
+    <div class="gallery-frame">
+
+      <div class="card--gallery">
+        <div class="card--gallery-inner">
+          <div class="gallery-img-section">
+            <button id="gallery-btn-8" class="gallery-btn g-btn-left" type="button" onmousedown="gallery8Left()"></button>
+            <img id="gallery8-img" class="main-img" src="/images/gallery/ulog/ulog1.png" />
+            <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery8Right()"></button>
+          </div>
+
+          <div class="gallery-right-section">
+            <h3>TDD Tool and Logger</h3>
+            <p>
+              <a href="https://github.com/ashthomasweb/js--tdd" target="_blank">uLog</a><br /><br /><span class="sub-items">in-development<br>future versions scheduled</span>
+            </p>
+            <br />
+            <h4>Tech</h4>
+            <ul>
+              <li><span class='tech-item'>JavaScript ES6</span></li>
+            </ul>
+            <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/js--tdd', target='_blank')">
+              View GitHub Repo
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card--gallery lower">
+        <div class="card--gallery-inner lower-text">
+          <p>
+            uLog is a simple test package for JavaScript and Node.js. It has just one test action, to verify the return of a function. uLog outputs all test data to a .txt file in the project
+            directory. Project is in development.
+          </p>
+          <p>
+            User can categorize the test run and the add a note which will be added to the test log. Expected failure is noted and Pass/Fail is displayed accordingly. Color coded log makes for ease in
+            identifying problems. Log output includes the function definition. Planned features include an options object to customize the output.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="spacer"></div>
 
     <!-- || Gallery7 Frame  -->
     <div class="gallery-frame">
@@ -155,12 +240,12 @@
             functionality on one page was an interesting challenge.
           </p>
           <p>
-            The site is a single page presentation. It's a Landing page, About page, 
+            The site is a single page presentation. It's a Landing page, About page,
             Product page, and Order page in one. It uses a single parallax on desktop and
             custom image background to provide a solid color at the top for legibility
             and cleanliness, gradually moving to a Colorado mountain scene for
             customer familiarity and business branding. Fully custom CSS and JS
-            animation and form work. The site runs on a Node and Express server. 
+            animation and form work. The site runs on a Node and Express server.
           </p>
         </div>
       </div>
@@ -182,7 +267,7 @@
 
           <div class="gallery-right-section">
             <h3>Database Tool</h3>
-            <p><a href="https://github.com/ashthomasweb/python--metaquery-db" target='_blank' >MetaQuery DB</a><br /><br /><span class="sub-items">on-going production<br />basic UI</span></p>
+            <p><a href="https://github.com/ashthomasweb/python--metaquery-db" target='_blank'>MetaQuery DB</a><br /><br /><span class="sub-items">on-going production<br />basic UI</span></p>
             <br />
             <h4>Tech</h4>
             <ul>
