Minor SkyLines description update

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       <div class="card--gallery lower" style="height: 220px">
         <div class="card--gallery-inner lower-text">
           <p>
-            This is a mock application using Ant Design and AWS Amplify for hosting. It is a direct replication of an existing software, using promotional videos to model the layout and actions. This
+            This is a mock application using Ant Design and AWS Amplify for hosting. It is an ongoing learning project, frontend only, without a data source. SkyLines is a partial replication of existing software, using promotional videos to model the layout and actions. This
             project is built for a specific interview, it will be taken down upon the completion of the interview process and not re-used. It's purpose is to familiarize myself with Ant Design and the
             AWS hosting platform.
           </p>
