Heroku project gallery update

--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,51 @@
     </div>
     <div class="spacer"></div>
 
+
+    
+    <!-- || Gallery10 Frame  -->
+    <div class="gallery-frame">
+
+      <div class="card--gallery">
+        <div class="card--gallery-inner">
+          <div class="gallery-img-section">
+            <button id="gallery-btn-10" class="gallery-btn g-btn-left" type="button" onmousedown="gallery10Left()"></button>
+            <img id="gallery10-img" class="main-img" src="/images/gallery/FERN/Capture.png" />
+            <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery10Right()"></button>
+          </div>
+
+          <div class="gallery-right-section">
+            <h3>Fullstack Image CRUD Template</h3>
+            <p>
+              <a href="https://fern-stack-rtdb-image-crud.herokuapp.com/" target="_blank">FERN Image CRUD</a><br /><br /><span class="sub-items">in-production<br>future versions scheduled</span>
+            </p>
+            <br />
+            <h4>Tech</h4>
+            <ul>
+              <li><span class='tech-item'>Node.js</span></li>
+              <li><span class='tech-item'>React</span></li>
+              <li><span class='tech-item'>Firebase Realtime DB</span></li>
+              <li><span class='tech-item'>Unsplash API</span></li>
+
+            </ul>
+            <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/FERN-img-saver', target='_blank')">
+              View GitHub Repo
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card--gallery lower" style="height: 180px;">
+        <div class="card--gallery-inner lower-text">
+          <p>
+            This is a basic architectural template for easy extraction. On extraction, simply run 'npm install', sign up for your own Unsplash API, and paste in your own heroku address. Template is bare-bones to encourage reusability. Similar template's will soon be packaged into a downloadable .zip for MERN Local and Atlas.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="spacer"></div>
+
+
     <!-- || Gallery8 Frame  -->
     <div class="gallery-frame">
 
