Updates Elephant Chart repo and description

--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,13 @@
             <br />
             <h4>Tech</h4>
             <ul>
-              <li><span class='tech-item'>Node.js</span></li>
               <li><span class='tech-item'>React</span></li>
+              <li><span class='tech-item'>TypeScript</span></li>
               <li><span class='tech-item'>SASS</span></li>
+              <li><span class='tech-item'>Node.js</span></li>
               <li><span class='tech-item'>Firebase Auth & Storage</span></li>
             </ul>
-            <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/react--elephant-chart', target='_blank')">
+            <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/typescript--elephant-chart', target='_blank')">
               View GitHub Repo
             </button>
           </div>
@@ -104,9 +105,7 @@
             after all.
           </p>
           <p>
-            Built with React. Experimentation with Hooks and Context is needed
-            before much further development. Potential full refactor if skewmorphic
-            effect can be maintained in more efficient architecture.
+            Built with React, using TypeScript and a Context API & Reducer for extensibility.
           </p>
         </div>
       </div>
