--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     <div class="project-header-wrapper top-pane">
       <h3 id="project-header">Professional Projects</h3>
       <label class="switch">
-        <input type="checkbox" onChange="toggleProjectPane()" />
+        <input type="checkbox" onClick="toggleProjectPane(event)" />
         <span class="slider"></span>
       </label>
     </div>
@@ -788,15 +788,17 @@
           </div>
         </div>
       </div>
+      
+      <div id="lower-switch-pane" class="project-header-wrapper bottom-pane">
+        <h3 id="project-header">Professional Projects</h3>
+        <label class="switch">
+          <input id="lower-switch" type="checkbox" onClick="toggleProjectPane(event)" />
+          <span class="slider"></span>
+        </label>
+      </div>
+
     </div>
 
-    <div class="project-header-wrapper bottom-pane">
-      <h3 id="project-header">Professional Projects</h3>
-      <label class="switch">
-        <input type="checkbox" onChange="toggleProjectPane()" />
-        <span class="slider"></span>
-      </label>
-    </div>
   </section>
 
   <div class="banner bottom">
