Increases font-size

--- a/public/index.html
+++ b/public/index.html
@@ -1032,7 +1032,6 @@
                 React<br />
                 ES6 / SASS<br />
                 Node / Express<br />
-                EJS / Heroku
               </p>
             </div>
           </div>
@@ -1041,9 +1040,9 @@
             <div class="skill-row-center">
               <p class="skill-text">
                 HTML5 / CSS3<br />
-                MySQL / Mongo<br />
+                SQL / NoSQL<br />
                 Firebase<br />
-                Git & Github
+                
               </p>
             </div>
           </div>
@@ -1051,10 +1050,9 @@
           <div class="inner2-skill-container on-break">
             <div class="skill-row-center">
               <p class="skill-text">
-                WebAudio API<br />
-                Prismic / Curator<br />
-                Nodemailer<br />
-                Python 2.7 & 3+
+                EJS / Vanilla JS<br/>
+                Git / Github<br/>
+                Python
               </p>
             </div>
           </div>
